--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .vs/
 obj/Debug/net8.0-windows/OP.AssemblyInfo.cs
 obj/Debug/net8.0-windows/OP.AssemblyInfoInputs.cache
+C:\Users\mtomk\source\repos\OP2\obj
